samples/_failures_safe/1761172303_baf636_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d64146dd.c: In function ‘bfs_shortest_path’:
./samples/SAFE/__tmp_d64146dd.c:167:9: error: expected ‘,’ or ‘;’ at end of input
  167 |         int current_index = -1
      |         ^~~
./samples/SAFE/__tmp_d64146dd.c:167:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d64146dd.c:167:9: error: expected declaration or statement at end of input
